cabal-version:      3.0
name:               scheme
version:            0.1.0.0
synopsis:           Build a scheme in 48 Hours

-- A longer description of the package.
-- description:
homepage: https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Georgios Atheridis
maintainer:         georgios@atheridis.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable scheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Lisp
        LispNum
        LispErrors
        LispParse

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        parsec ^>=3.1.16.1,
        mtl ^>=2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
